--- a/contact_structural_mechanics/use_cases/arc_block/source/ProjectParameters_rigid_arc.json
+++ b/contact_structural_mechanics/use_cases/arc_block/source/ProjectParameters_rigid_arc.json
@@ -25,8 +25,6 @@
         "residual_relative_tolerance"        : 0.0001,
         "residual_absolute_tolerance"        : 1e-9,
         "max_iteration"                      : 20,
-        "problem_domain_sub_model_part_list" : ["Parts_Parts_Auto1","Parts_Parts_Auto2"],
-        "processes_sub_model_part_list"      : ["Structure","DISPLACEMENT_Displacement_Auto1","DISPLACEMENT_Displacement_Auto2","CONTACT_Contact_slave_Auto1","CONTACT_Contact_master_Auto1"],
         "contact_settings"                   : {
             "mortar_type"                             : "ALMContactFrictionlessComponents"
         },
@@ -136,7 +134,7 @@
                 "element_flags"                      : [],
                 "condition_data_value_variables"     : [],
                 "condition_flags"                    : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS"]
+                "gauss_point_variables_extrapolated_to_nodes" : ["VON_MISES_STRESS"]
             }
         }]
     }
