--- a/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_1/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/cylinders/source/horizontal_movement_1/ProjectParameters.json
@@ -29,8 +29,6 @@
         "residual_relative_tolerance"        : 0.0001,
         "residual_absolute_tolerance"        : 1e-9,
         "max_iteration"                      : 10,
-        "problem_domain_sub_model_part_list" : ["Parts_Parts_Auto1"],
-        "processes_sub_model_part_list"      : ["Structure","DISPLACEMENT_FixedBase","DISPLACEMENT_Displacement_Auto2"],
         "contact_settings"                   : {
             "mortar_type" : "ALMContactFrictionlessComponents"
         }
@@ -129,7 +127,7 @@
                 "element_flags"                      : [],
                 "condition_data_value_variables"     : [],
                 "condition_flags"                    : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS"]
+                "gauss_point_variables_extrapolated_to_nodes" : ["VON_MISES_STRESS"]
             }
         }]
     }
