--- a/contact_structural_mechanics/use_cases/gears/source/ProjectParameters_linear.json
+++ b/contact_structural_mechanics/use_cases/gears/source/ProjectParameters_linear.json
@@ -25,8 +25,6 @@
         "residual_relative_tolerance"        : 0.0001,
         "residual_absolute_tolerance"        : 1e-9,
         "max_iteration"                      : 25,
-        "problem_domain_sub_model_part_list" : ["Parts_Gear1","Parts_Gear2"],
-        "processes_sub_model_part_list"      : ["Structure","DISPLACEMENT_Disp1","DISPLACEMENT_Disp2","SkinModelPart1","SkinModelPart2"],
         "contact_settings"                   : {
             "mortar_type"                             : "ALMContactFrictionlessComponents"
         },
@@ -137,7 +135,7 @@
                 "element_flags"                      : [],
                 "condition_data_value_variables"     : [],
                 "condition_flags"                    : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS"]
+                "gauss_point_variables_extrapolated_to_nodes" : ["VON_MISES_STRESS"]
             }
         }]
     }
