--- a/contact_structural_mechanics/use_cases/hyperelastic_tubes/source/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/hyperelastic_tubes/source/ProjectParameters.json
@@ -148,7 +148,7 @@
                 "element_flags"                      : [],
                 "condition_data_value_variables"     : [],
                 "condition_flags"                    : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS"]
+                "gauss_point_variables_extrapolated_to_nodes" : ["VON_MISES_STRESS"]
             }
         }]
     }
