--- a/contact_structural_mechanics/use_cases/in_ring/source/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/in_ring/source/ProjectParameters.json
@@ -25,8 +25,6 @@
         "residual_relative_tolerance"        : 0.0001,
         "residual_absolute_tolerance"        : 1e-9,
         "max_iteration"                      : 10,
-        "problem_domain_sub_model_part_list" : ["Parts_Parts_Auto1","Parts_Parts_Auto2"],
-        "processes_sub_model_part_list"      : ["Parts_Parts_Auto1","Parts_Parts_Auto2","DISPLACEMENT_Displacement_Auto1","DISPLACEMENT_Displacement_Auto2","CONTACT_Contact_Auto1","SelfWeight3D_Self_weight_Auto1"],
         "contact_settings"                   : {
             "mortar_type"                        : "ALMContactFrictionlessComponents"
         },
@@ -159,7 +157,7 @@
                 "element_flags"                      : [],
                 "condition_data_value_variables"     : [],
                 "condition_flags"                    : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS"]
+                "gauss_point_variables_extrapolated_to_nodes" : ["VON_MISES_STRESS"]
             }
         }]
     }
