--- a/contact_structural_mechanics/use_cases/tooth_model/source/composite15+enamel25/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/tooth_model/source/composite15+enamel25/ProjectParameters.json
@@ -37,9 +37,7 @@
         "displacement_absolute_tolerance"    : 1e-9,
         "residual_relative_tolerance"        : 0.0001,
         "residual_absolute_tolerance"        : 1e-9,
-        "max_iteration"                      : 15,
-        "problem_domain_sub_model_part_list" : ["Parts_composite","Parts_esmalte","Parts_press"],
-        "processes_sub_model_part_list"      : ["DISPLACEMENT_Displacement_Auto1","DISPLACEMENT_Displacement_Auto2","CONTACT_Contact_Auto1"]
+        "max_iteration"                      : 15
     },
     "processes" : {
         "constraints_process_list" : [{
@@ -135,7 +133,7 @@
                 "element_flags"                      : [],
                 "condition_data_value_variables"     : [],
                 "condition_flags"                    : [],
-                "gauss_point_variables"              : ["VON_MISES_STRESS"]
+                "gauss_point_variables_extrapolated_to_nodes" : ["VON_MISES_STRESS"]
             }
         }]
     }
