--- a/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
@@ -18,6 +18,9 @@
             "input_type":       "mdpa",
             "input_filename":   "consolidation_interface_3D"
         },
+        "material_import_settings" :{
+            "materials_filename": "PoroMaterials.json"
+        },
         "buffer_size":                        2,
         "echo_level":                         1,
         "clear_storage":                      false,
